# klee-taint-ct

./: .gitmodules  Dockerfile  README.md
.travis/: klee.sh  stp.sh
examples/taint/: Makefile  openssl-cve.patch
examples/taint/aes/: Makefile  aes.cpp  aes.h
examples/taint/aria/: Makefile  aria.cpp  aria.h
examples/taint/camellia/: Makefile  camellia.cpp  camellia.h
examples/taint/chacha/: Makefile  chacha.cpp
examples/taint/dsa/: Makefile  dsa.cpp
examples/taint/ecdhe/: .gitignore  Makefile  ecdhe.cpp  ecdhe.h
examples/taint/md2/: Makefile  md2.cpp
examples/taint/md4/: Makefile  md4.cpp
examples/taint/md5/: Makefile  md5.cpp
examples/taint/mdc2/: Makefile  mdc2.cpp
examples/taint/poly1305/: Makefile  poly1305.cpp
examples/taint/rsa/: Makefile  rsa.cpp
examples/taint/s2n/hmac_digest/: Makefile  hmac_digest.c
examples/taint/sec16almeida/: smack.h
examples/taint/sec16almeida/figure2/: Makefile  figure2.cpp
examples/taint/sec16almeida/figure3/: Makefile  figure3.cpp
examples/taint/sec16almeida/nacl_salsa20/: Makefile  nacl_salsa20.c
examples/taint/sec16almeida/qhasm/: Makefile  qhasm.c
examples/taint/sec16almeida/tea/: Makefile  tea.cpp
examples/taint/sha/: Makefile  sha.h  sha256.cpp
lib/Core/: Executor.cpp
test/: CMakeLists.txt
tools/gen-random-bout/: CMakeLists.txt
tools/kleaver/: CMakeLists.txt
tools/klee/: CMakeLists.txt
tools/klee-replay/: CMakeLists.txt
